// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Route) dashboard (Component) poll table (Render) loading should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="panel"
  >
    <div
      class="panel-header"
    >
      Polls
    </div>
    <div
      class="panel-body"
    >
      <div
        class="spinner-container center-text"
        data-testid="spinner-container"
      >
        <div
          class="spinner"
        >
          <span
            class="spinner_dot spinner_dot--first"
          />
          <span
            class="spinner_dot spinner_dot--second"
          />
          <span
            class="spinner_dot spinner_dot--third"
          />
        </div>
      </div>
      <div
        class="table-container hidden"
        data-testid="table-container"
      >
        <table>
          <thead>
            <tr>
              <th
                class="sort-active"
                style="width: 4em;"
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  ID
                  <i
                    class="fa fa-sort-down"
                  />
                </button>
              </th>
              <th
                class=""
                style="width: 8em;"
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  Identifier
                  <i
                    class="fa fa-sort"
                  />
                </button>
              </th>
              <th
                class=""
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  Question
                  <i
                    class="fa fa-sort"
                  />
                </button>
              </th>
              <th
                class=""
                style="width: 8em;"
              >
                <span>
                  Responses
                </span>
              </th>
              <th
                class=""
                style="width: 8em;"
              >
                <span>
                  Status
                </span>
              </th>
              <th
                class=""
                style="width: 12em;"
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  Created At
                  <i
                    class="fa fa-sort"
                  />
                </button>
              </th>
              <th
                class=""
                style="width: 4em;"
              >
                <span>
                  Delete
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        Mocked Paginator
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`(Route) dashboard (Component) poll table (Render) should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="panel"
  >
    <div
      class="panel-header"
    >
      Polls
    </div>
    <div
      class="panel-body"
    >
      <div
        class="spinner-container center-text"
        data-testid="spinner-container"
      >
        <div
          class="spinner"
        >
          <span
            class="spinner_dot spinner_dot--first"
          />
          <span
            class="spinner_dot spinner_dot--second"
          />
          <span
            class="spinner_dot spinner_dot--third"
          />
        </div>
      </div>
      <div
        class="table-container hidden"
        data-testid="table-container"
      >
        <table>
          <thead>
            <tr>
              <th
                class="sort-active"
                style="width: 4em;"
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  ID
                  <i
                    class="fa fa-sort-down"
                  />
                </button>
              </th>
              <th
                class=""
                style="width: 8em;"
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  Identifier
                  <i
                    class="fa fa-sort"
                  />
                </button>
              </th>
              <th
                class=""
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  Question
                  <i
                    class="fa fa-sort"
                  />
                </button>
              </th>
              <th
                class=""
                style="width: 8em;"
              >
                <span>
                  Responses
                </span>
              </th>
              <th
                class=""
                style="width: 8em;"
              >
                <span>
                  Status
                </span>
              </th>
              <th
                class=""
                style="width: 12em;"
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  Created At
                  <i
                    class="fa fa-sort"
                  />
                </button>
              </th>
              <th
                class=""
                style="width: 4em;"
              >
                <span>
                  Delete
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        Mocked Paginator
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`(Route) dashboard (Component) poll table (Render) with less than 1 page polls should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="panel"
  >
    <div
      class="panel-header"
    >
      Polls
    </div>
    <div
      class="panel-body"
    >
      <div
        class="spinner-container center-text no-paginator"
        data-testid="spinner-container"
      >
        <div
          class="spinner"
        >
          <span
            class="spinner_dot spinner_dot--first"
          />
          <span
            class="spinner_dot spinner_dot--second"
          />
          <span
            class="spinner_dot spinner_dot--third"
          />
        </div>
      </div>
      <div
        class="table-container hidden"
        data-testid="table-container"
      >
        <table>
          <thead>
            <tr>
              <th
                class="sort-active"
                style="width: 4em;"
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  ID
                  <i
                    class="fa fa-sort-down"
                  />
                </button>
              </th>
              <th
                class=""
                style="width: 8em;"
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  Identifier
                  <i
                    class="fa fa-sort"
                  />
                </button>
              </th>
              <th
                class=""
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  Question
                  <i
                    class="fa fa-sort"
                  />
                </button>
              </th>
              <th
                class=""
                style="width: 8em;"
              >
                <span>
                  Responses
                </span>
              </th>
              <th
                class=""
                style="width: 8em;"
              >
                <span>
                  Status
                </span>
              </th>
              <th
                class=""
                style="width: 12em;"
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  Created At
                  <i
                    class="fa fa-sort"
                  />
                </button>
              </th>
              <th
                class=""
                style="width: 4em;"
              >
                <span>
                  Delete
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
            <tr>
              <td>
                Mocked PollTableRow
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        Mocked Paginator
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`(Route) dashboard (Component) poll table (Render) with no polls should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="panel"
  >
    <div
      class="panel-header"
    >
      Polls
    </div>
    <div
      class="panel-body"
    >
      <div
        class="spinner-container center-text no-paginator"
        data-testid="spinner-container"
      >
        <div
          class="spinner"
        >
          <span
            class="spinner_dot spinner_dot--first"
          />
          <span
            class="spinner_dot spinner_dot--second"
          />
          <span
            class="spinner_dot spinner_dot--third"
          />
        </div>
      </div>
      <div
        class="table-container hidden"
        data-testid="table-container"
      >
        <table>
          <thead>
            <tr>
              <th
                class="sort-active"
                style="width: 4em;"
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  ID
                  <i
                    class="fa fa-sort-down"
                  />
                </button>
              </th>
              <th
                class=""
                style="width: 8em;"
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  Identifier
                  <i
                    class="fa fa-sort"
                  />
                </button>
              </th>
              <th
                class=""
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  Question
                  <i
                    class="fa fa-sort"
                  />
                </button>
              </th>
              <th
                class=""
                style="width: 8em;"
              >
                <span>
                  Responses
                </span>
              </th>
              <th
                class=""
                style="width: 8em;"
              >
                <span>
                  Status
                </span>
              </th>
              <th
                class=""
                style="width: 12em;"
              >
                <button
                  tabindex="0"
                  type="button"
                >
                  Created At
                  <i
                    class="fa fa-sort"
                  />
                </button>
              </th>
              <th
                class=""
                style="width: 4em;"
              >
                <span>
                  Delete
                </span>
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
      <div>
        Mocked Paginator
      </div>
    </div>
  </div>
</DocumentFragment>
`;
